# kwasa-kwasa

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONSCIOUSNESS_COMPUTING_COMPLETE_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  DOMAIN_EXPANSION.md  Dockerfile  LICENSE  Makefile  README.md  REVOLUTIONARY_PARADIGMS_IMPLEMENTATION.md  RUST_ANALYZER_TROUBLESHOOTING.md  SCIENTIFIC_DATA_EXTENSIONS.md  USAGE_GUIDE.md  build.rs  clippy.toml  development_roadmap.md  docker-compose.yml  env.example  fix_turbulance_syntax.sh  implementation_notes.md  implementation_status.md  kwasa-kwasa.code-workspace  kwasa-kwasa.md  pyproject.toml  rust-toolchain.toml  rustfmt.toml  setup.md  vision.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benches/: text_operations.rs
black-powder/: next.config.js  package-lock.json  package.json
docs/: PROBABILISTIC_TEXT_OPERATIONS.md  README.md  SYSTEM_ARCHITECTURE_ANALYSIS.md  TURBULANCE_CONSCIOUSNESS_INTEGRATION_COMPLETE.md  _config.yml  autobahn-complete-implementation.md  basic-usage.md  bulawayo-algorithm.tex  complete_system_guide.md  consciousness_primitives_implementation.md  consciousness_turbulance_integration.md  domain-extensions.md  domain_expansion_plan.md  domains.md  errors.md  generated.md  hegel.md  honjo-masamune.tex  hybrid-imperative.md  implementation_notes.md  implementation_status.md  index.md  installation.md  kwasa-kwasa-algorithms.tex  kwasa-kwasa.aux  kwasa-kwasa.fdb_latexmk  kwasa-kwasa.fls  kwasa-kwasa.out  kwasa-kwasa.tex  kwasa-kwasa.toc  metacognitive-orchestration.md  notes.md  original.md  polyglot-programming.md  self-aware-algorithms.tex  semantic-bmds.md  semantics.tex  turbulance-cheminformatics-masterclass.md  turbulance-language.md  turbulance-syntax-analysis.md
examples/: audio_analysis.turb  audio_analysis_complete.turb  basic_example.trb  chemistry_analysis.turb  consciousness_programming_depression.rs  cross_domain_analysis.turb  evidence_integration.rs  genomic_analysis.turb  pattern_analysis.turb  polyglot_drug_discovery.turb  probabilistic_text_example.turb  proposition_example.turb  proteomics_analysis.turb  quantum_calibration.trb  semantic_image_programming.md  spectrometry_analysis.turb  sports_analysis_demo.turb  turbulance_image_examples.md  wasm_demo.html
python/: CONSCIOUSNESS_COMPILER_COMPLETE.md  DISCUSSION_POINTS.md  GROUNDED_EXAMPLES_SUMMARY.md  QUICK_REFERENCE.md  README.md  RESULTS_SUMMARY.md  TURBULANCE_COMPILER_QUICKSTART.md  VALIDATION_OUTPUTS.md  VALIDATION_RESULTS_ANALYSIS.md  requirements.txt  semantic_maxwell_demon.py  test_all_examples.bat  test_compiler.bat  test_compiler.sh  test_compiler_save.bat  turbulance.py  turbulance_compiler.py  turbulance_consciousness.py
scripts/: fix-rust-analyzer.sh
semantic/: PACKAGE_SUMMARY.md  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
semantic/docs/computing/: asymptotic-categorical-junctions.tex  phase-space-mechanics.tex  psychon-circuit-mechanics.tex
semantic/docs/semantic-maxwell-demon/: semantic-maxwell-demons.aux  semantic-maxwell-demons.blg  semantic-maxwell-demons.out
semantic/publication/semantic-categorical-aperture/: generate_figures.py  references.bib  semantic-categorical-aperture.aux  semantic-categorical-aperture.bbl  semantic-categorical-aperture.blg  semantic-categorical-aperture.out  semantic-categorical-aperture.tex
semantic/src/bmd/: __init__.py  bidirectional_interface.py  bmd_state.py  state_detection.py  thought_injection.py
semantic/src/calibration/: __init__.py  calibration_engine.py  transfer_functions.py  user_model.py
semantic/src/compression/: __init__.py  dual_strand.py  richness_detection.py
semantic/src/core/: __init__.py  categorical_state.py  s_entropy.py  semantic_maxwell_demon.py
semantic/src/encoding/: __init__.py  cardinal_directions.py  positional_context.py  word_expansion.py
semantic/src/gravity/: __init__.py  information_density.py  potential_energy_landscape.py  thermodynamic_constraints.py
semantic/src/sampling/: __init__.py  bayesian_random_walks.py  complexity.py  convergence_guarantees.py  empty_dictionary.py
semantic/src/trajectory/: __init__.py  bmd_trajectory.py  query_detection.py  sufficiency.py
semantic/validation/: 01_test_core_components.py  02_validate_depression_data.py  03_multi_lens_analysis.py  README_VALIDATION.md  bmd_state_detection.py  complexity_reduction.py  distance_amplification.py  eeg_regime_validation.py  empty_dictionary_synthesis.py  metabolic_proton_flux_validation.py  pharmacological_aperture_validation.py  run_extended_validation.py  s_entropy_distance_amplification.py  semantic_filtering.py  thought_injection.py  validate_clinical_depression.py
semantic/validation/results/: 01_core_test_results.txt  02_depression_validation.txt  03_multi_lens_comparison.txt
src/: error.rs  lib.rs  main.rs  utils.rs  wasm.rs
src/audio/: mod.rs  (+17 more)
tests/: integration_test.rs  metacognitive_test.rs  proposition_test.rs
turbulance/: Cargo.toml  README.md
turbulance/examples/: hypothesis_testing.turb  simple_calculation.turb
turbulance/src/: ast.rs  context.rs  engine.rs  error.rs  external_apis.rs  fullscreen.rs  genomic.rs  harare.rs  image.rs  interpreter.rs  knowledge.rs  lexer.rs  lib.rs  orchestrator.rs  parser.rs  pattern.rs  script.rs  space_computer.rs  spectrometry.rs  text_unit.rs  trebuchet.rs  utils.rs  visualization.rs
turbulance/src/audio/: analysis.rs  beat_processing.rs  features.rs  generation.rs  heihachi.rs  huggingface.rs  mod.rs  neural_models.rs  pakati.rs  propositions.rs  reconstruction.rs  semantic_audio.rs  stem_separation.rs  temporal_analysis.rs  types.rs  understanding.rs
turbulance/src/chemistry/: fingerprinting.rs  graph_theory.rs  mod.rs  molecule.rs  probabilistic_chemistry.rs  reaction_mining.rs
vscode-extensions/: MARKETPLACE_INSTALL.md  MARKETPLACE_READY.md  MARKETPLACE_SETUP.md  PUBLISH_TO_MARKETPLACE.md  README.md  TESTING_CHECKLIST.md  USAGE_GUIDE.md  install.bat  install.sh  package.json
web/: next.config.js  package-lock.json  package.json  test-turbulance.mjs
(+489 files in other folders)
