[package]
name = "kwasa-kwasa"
version = "0.1.0"
edition = "2021"
authors = ["Kundai"]
description = "A metacognitive text processing framework with Turbulance syntax"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/kwasa-kwasa"

[dependencies]
# CLI
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.3"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
rustyline-derive = "0.9.0"
dirs = "5.0.1"

# Language Implementation
logos = "0.13.0"
chumsky = "0.9.2"

# Text Processing
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1.22"
rust-stemmers = "1.2.0"
regex = "1.8.1"
rand = "0.8.5"

# Date and Time
chrono = { version = "0.4.31", features = ["serde"] }

# Knowledge Database
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.25"
toml = "0.8.8"

# Web Integration
reqwest = { version = "0.11.18", features = ["json"] }
scraper = "0.16.0"
urlencoding = "2.1.3"

# Concurrency
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
rayon = "1.7.0"
async-trait = "0.1.68"
num_cpus = "1.16.0"

# Utilities
log = "0.4.18"
env_logger = "0.10.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebAssembly
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Performance", "console"] }
js-sys = "0.3.64"
serde-wasm-bindgen = "0.5.0"
console_error_panic_hook = "0.1.7"

# Configuration
config = "0.13"

# Async and concurrency
futures = "0.3"

# Data structures
dashmap = "5.0"
indexmap = "2.0"

# Numerical computations
num-traits = "0.2"

# Audio processing dependencies
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
rustfft = "6.1"
apodize = "1.0"
realfft = "3.3"

# Video processing dependencies (Spectacular)
opencv = { version = "0.88", features = ["opencv-4"] }
ffmpeg-next = "6.0"
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp"] }
imageproc = "0.23"
ndarray = "0.15"

# Geospatial processing dependencies (Sighthound)
geo = "0.26"
geojson = "0.24"
proj = "0.27"
gdal = "0.16"
rstar = "0.12"

# AI/ML dependencies (Nebuchadnezzar)
candle-core = "0.3"
candle-nn = "0.3" 
candle-transformers = "0.3"
tokenizers = "0.14"
hf-hub = "0.3"

# Microservices dependencies (Trebuchet)
tonic = "0.10"
prost = "0.12"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Network graph visualization (Fullscreen)
petgraph = "0.6"
graphviz-rust = "0.8"
dot_writer = "0.1"
serde_graph = "0.1"

# Code execution and analysis (Zangalewa)
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

# Meta orchestrator (Harare)
crossbeam = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Additional utilities
base64 = "0.21"
hex = "0.4"
bytes = "1.4"
memmap2 = "0.7"
walkdir = "2.3"
notify = "6.0"
once_cell = "1.18"
lazy_static = "1.4"

# Development dependencies for testing
[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0"
tempfile = "3.5.0"

# Benchmark configuration is now active
[[bench]]
name = "text_operations"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["full"]
full = ["genomics", "chemistry", "spectrometry", "visualization", "audio"]
genomics = []
chemistry = []
spectrometry = []
visualization = []
audio = []
