[package]
name = "kwasa-kwasa"
version = "0.1.0"
edition = "2021"
authors = ["Kundai"]
description = "A metacognitive text processing framework with Turbulance DSL language and Autobahn reasoning engine"
readme = "README.md"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/kwasa-kwasa"

[dependencies]
# Core Reasoning Engine - The Thinking Substrate
autobahn = { version = "0.1.0", path = "../autobahn", features = ["membrane", "consciousness", "biological", "temporal"] }

# External specialized modules (developed separately)
kwasa-meta-orchestrator = { version = "0.1.0", path = "../kwasa-meta-orchestrator", optional = true }
kwasa-cheminformatics = { version = "0.1.0", path = "../kwasa-cheminformatics", optional = true }
kwasa-systems-biology = { version = "0.1.0", path = "../kwasa-systems-biology", optional = true }
kwasa-spectrometry = { version = "0.1.0", path = "../kwasa-spectrometry", optional = true }
kwasa-multimedia = { version = "0.1.0", path = "../kwasa-multimedia", optional = true }
kwasa-specialized-modules = { version = "0.1.0", path = "../kwasa-specialized-modules", optional = true }

# Core Framework Dependencies
# CLI
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.3"
rustyline = { version = "11.0.0", features = ["with-file-history"] }
rustyline-derive = "0.9.0"
dirs = "5.0.1"

# Language Implementation (Core DSL)
logos = "0.13.0"
chumsky = "0.9.2"

# Text Processing (Framework Core)
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1.22"
rust-stemmers = "1.2.0"
regex = "1.8.1"
rand = "0.8.5"

# Date and Time
chrono = { version = "0.4.31", features = ["serde"] }

# Knowledge Database (Framework)
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.25"
toml = "0.8.8"

# Web Integration (Framework)
reqwest = { version = "0.11.18", features = ["json"] }
scraper = "0.16.0"
urlencoding = "2.1.3"

# Concurrency (Framework Core)
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
rayon = "1.7.0"
async-trait = "0.1.68"
num_cpus = "1.16.0"

# Utilities (Framework Core)
log = "0.4.18"
env_logger = "0.10.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebAssembly (Framework)
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Performance", "console"] }
js-sys = "0.3.64"
serde-wasm-bindgen = "0.5.0"
console_error_panic_hook = "0.1.7"

# Configuration (Framework)
config = "0.13"

# Async and concurrency (Framework)
futures = "0.3"

# Data structures (Framework)
dashmap = "5.0"
indexmap = "2.0"

# Numerical computations (Framework)
num-traits = "0.2"

# Development dependencies for testing
[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0"
tempfile = "3.5.0"

# Benchmark configuration
[[bench]]
name = "text_operations"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["framework-core", "autobahn-reasoning"]
framework-core = []
autobahn-reasoning = ["autobahn"]
full = ["meta-orchestrator", "cheminformatics", "systems-biology", "spectrometry", "multimedia", "specialized-modules"]
meta-orchestrator = ["kwasa-meta-orchestrator"]
cheminformatics = ["kwasa-cheminformatics"]
systems-biology = ["kwasa-systems-biology"]
spectrometry = ["kwasa-spectrometry"]
multimedia = ["kwasa-multimedia"]
specialized-modules = ["kwasa-specialized-modules"]
