[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-maxwell-demon"
version = "0.1.0"
description = "Thermodynamic framework for semantic information navigation and bidirectional categorical communication"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Kundai Farai Sachikonye", email = "kundai.sachikonye@tum.de" },
]
keywords = [
  "semantic-processing",
  "maxwell-demon",
  "thermodynamics",
  "categorical-completion",
  "bayesian-inference",
  "information-theory",
  "categorical-telepathy",
]

[project.urls]
Homepage = "https://github.com/ksachikonye/semantic-maxwell-demon"
Documentation = "https://semantic-maxwell-demon.readthedocs.io"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
